--- a/package.json
+++ b/package.json
@@ -8,15 +8,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo-google-fonts/archivo": "^0.1.0",
+    "@expo-google-fonts/inter": "^0.1.0",
     "expo": "~41.0.1",
-    "expo-updates": "~0.5.4",
+    "expo-app-loading": "^1.0.3",
+    "expo-font": "~9.1.0",
     "expo-splash-screen": "~0.10.2",
+    "expo-updates": "~0.5.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-native-calendars": "^1.1262.0",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.1.0",
+    "react-native-responsive-fontsize": "^0.5.0",
     "react-native-screens": "~3.0.0",
+    "react-native-svg": "12.1.0",
     "react-native-unimodules": "~0.13.3",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.3.0"
@@ -40,7 +48,9 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
-    "prettier": "^2.1.1"
+    "prettier": "^2.1.1",
+    "@types/react-native-calendars": "^1.505.3",
+    "react-native-svg-transformer": "^0.14.3"
   },
   "jest": {
     "preset": "react-native"
