--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.1.0",
     "@expo-google-fonts/inter": "^0.1.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^5.9.4",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~9.1.0",
@@ -19,11 +21,12 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-calendars": "^1.1262.0",
-    "react-native-gesture-handler": "~1.10.2",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-iphone-x-helper": "^1.3.1",
-    "react-native-reanimated": "~2.1.0",
+    "react-native-reanimated": "^2.2.0",
     "react-native-responsive-fontsize": "^0.5.0",
-    "react-native-screens": "~3.0.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.3.0",
     "react-native-svg": "12.1.0",
     "react-native-unimodules": "~0.13.3",
     "react-native-web": "~0.13.12",
@@ -33,12 +36,11 @@
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/react-native-calendars": "^1.505.3",
     "@types/styled-components-react-native": "^5.1.1",
-    "babel-preset-expo": "~8.3.0",
-    "jest-expo": "~41.0.0",
-    "typescript": "~4.0.0",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
+    "babel-preset-expo": "~8.3.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
@@ -48,9 +50,10 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
+    "jest-expo": "~41.0.0",
     "prettier": "^2.1.1",
-    "@types/react-native-calendars": "^1.505.3",
-    "react-native-svg-transformer": "^0.14.3"
+    "react-native-svg-transformer": "^0.14.3",
+    "typescript": "~4.0.0"
   },
   "jest": {
     "preset": "react-native"
