--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "ios": "react-native run-ios",
     "web": "expo start --web",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "serve": "json-server  src/services/server.json --port 3333 --delay 700"
   },
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.1.0",
@@ -31,6 +32,8 @@
     "react-native-svg": "12.1.0",
     "react-native-unimodules": "~0.13.3",
     "react-native-web": "~0.13.12",
+    "axios": "^0.21.1",
+    "date-fns": "^2.22.1",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
