--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "axios": "^0.21.1",
+    "date-fns": "^2.22.1",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~9.1.0",
@@ -32,8 +34,6 @@
     "react-native-svg": "12.1.0",
     "react-native-unimodules": "~0.13.3",
     "react-native-web": "~0.13.12",
-    "axios": "^0.21.1",
-    "date-fns": "^2.22.1",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
@@ -55,6 +55,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
     "jest-expo": "~41.0.0",
+    "json-server": "^0.16.3",
     "prettier": "^2.1.1",
     "react-native-svg-transformer": "^0.14.3",
     "typescript": "~4.0.0"
