--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "web": "expo start --web",
     "start": "react-native start",
     "test": "jest",
-    "serve": "json-server  src/services/server.json --port 3333 --delay 700"
+    "server": "json-server  src/services/server.json --port 3333 --delay 700"
   },
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.1.0",
