update displayName,name and splash

--- a/app.json
+++ b/app.json
@@ -1,12 +1,16 @@
 {
   "name": "rentx-mobile",
-  "displayName": "rentx-mobile",
+  "displayName": "Rentx",
   "expo": {
-    "name": "rentx-mobile",
+    "name": "Rentx",
     "slug": "rentx-mobile",
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "splash": {
+			"image": "./assets/splash.png",
+			"backgroundColor": "#1B1B1F"
+		}
   }
 }
