--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "web": "expo start --web",
     "start": "react-native start",
     "test": "jest",
+    "server:expo": "json-server  src/services/server.json --host 192.168.0.106 --port 3333 --delay 700",
     "server": "json-server  src/services/server.json --port 3333 --delay 700"
   },
   "dependencies": {
