--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-font": "~9.1.0",
     "expo-splash-screen": "~0.10.2",
     "expo-updates": "~0.5.4",
+    "lottie-ios": "3.1.8",
     "lottie-react-native": "^4.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
