--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@expo-google-fonts/inter": "^0.1.0",
     "@nozbe/watermelondb": "^0.22.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
