--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-calendars": "^1.1262.0",
+    "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "^2.0.0",
